# banking_operations_widget

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
data/logs/: mylog.txt
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_decorators_py.html  z_145eef247bfb46b6_external_api_py.html  z_145eef247bfb46b6_filter_transactions_py.html  z_145eef247bfb46b6_generators_py.html  z_145eef247bfb46b6_masks_py.html  z_145eef247bfb46b6_processing_py.html  z_145eef247bfb46b6_transactions_from_files_py.html  z_145eef247bfb46b6_utils_py.html  z_145eef247bfb46b6_widget_py.html
src/: decorators.py  external_api.py  filter_transactions.py  generators.py  masks.py  processing.py  transactions_from_files.py  utils.py  widget.py
tests/: conftest.py  test_decorators.py  test_external_api.py  test_filter_transactions.py  test_generators.py  test_main.py  test_masks.py  test_processing.py  test_transactions_from_files.py  test_utils.py  test_widget.py
